# llvm-pass-allocsize

./: CMakeLists.txt  test.c  test_alloc_out
allocpass/: Allocpass.cpp  CMakeLists.txt
